--- a/src/branding-malawi/variables.scss
+++ b/src/branding-malawi/variables.scss
@@ -1,1 +1,7 @@
-$brand-primary: #008080;
+$mw-teal: #008080;
+$mw-green: #44B704;
+
+$green: $mw-green;
+
+$brand-primary: $mw-teal;
+$link-color: $mw-teal;
