--- a/src/requisition-batch-approval/requisition-batch-approval.scss
+++ b/src/requisition-batch-approval/requisition-batch-approval.scss
@@ -1,3 +1,32 @@
 .requisition-error {
   background: $brand-danger !important;
 }
+
+.openlmis-table {
+
+    > thead > tr.not-bottom > th {
+        background: lighten($dark-gray, 15%);
+        &.is-hidden {
+            border-bottom-width: 0px !important;
+        }
+    }
+
+    td.numeric {
+        text-align: right;
+    }
+
+    td.total-cell,
+    tr.total-row > td,
+    tr:nth-child(2n+1) > td.total-cell {
+        background-color: $light-gray;
+        color: $black;
+    }
+
+    tr:nth-child(2n) > td.total-cell {
+        background-color: $background-color-alt;
+    }
+
+    tr.total-row > td {
+        font-weight: bold;
+    }
+} 
