MW-567: Override OpenLMIS logo by Malawi logo and fixed error after login

--- a/src/branding-malawi/logo.scss
+++ b/src/branding-malawi/logo.scss
@@ -13,9 +13,9 @@
 	color: $white;
 }
 
-body .login-form {
-	background-image: url('branding-malawi/logo.png');
-	background-size: auto;
-	background-position: $space-size*2 $space-size;
-	min-height: 258px + $space-size;
+.auth-modal .modal-body {
+	background-image: url('branding-malawi/logo.png') !important;
+	background-size: auto !important;
+	background-position: $space-size*2 $space-size !important;
+	min-height: 258px + $space-size !important;
 }
